docs/archive/ltp-score-improvement/ltp-score-improvement-2026-05-22-phase-d/raw/task4-cargo-check-rv.log
start=2026-05-22T23:21:32+08:00
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
    Checking log v0.4.29
   Compiling heck v0.5.0
    Checking bitflags v2.11.0
   Compiling utf8parse v0.2.2
    Checking cfg-if v1.0.4
   Compiling anstyle-parse v1.0.0
   Compiling syn v2.0.117
   Compiling is_terminal_polyfill v1.70.2
   Compiling anstyle-query v1.1.5
   Compiling colorchoice v1.0.5
   Compiling anstyle v1.0.14
   Compiling anstream v1.0.0
   Compiling clap_lex v1.1.0
   Compiling hashbrown v0.16.1
   Compiling equivalent v1.0.2
   Compiling axerrno v0.2.2
   Compiling strsim v0.11.1
   Compiling clap_builder v4.6.0
   Compiling indexmap v2.13.1
   Compiling strum_macros v0.27.2
   Compiling clap_derive v4.6.0
    Checking strum v0.27.2
   Compiling crate_interface v0.3.0
   Compiling toml_datetime v0.6.11
   Compiling toml_write v0.1.2
   Compiling winnow v0.7.15
   Compiling clap v4.6.0
   Compiling axconfig v0.2.0 (/root/oskernel2026-orays/.omx/team/phase-d-ltp-stable-sc-ae18f5c7/worktrees/worker-3/kernel/config/axconfig)
   Compiling syn v1.0.109
    Checking memory_addr v0.4.1
    Checking axerrno v0.1.2
    Checking kernel_guard v0.2.0
    Checking scopeguard v1.2.0
   Compiling paste v1.0.15
   Compiling rustversion v1.0.22
    Checking lock_api v0.4.14
   Compiling toml_edit v0.22.27
   Compiling axconfig-gen v0.2.1
   Compiling unicode-width v0.1.14
   Compiling linkme-impl v0.3.35
   Compiling base64 v0.13.1
   Compiling axconfig-macros v0.2.1
   Compiling svgbobdoc v0.3.0
    Checking kspin v0.2.0
   Compiling riscv-macros v0.4.0
    Checking riscv-types v0.1.0
    Checking bit_field v0.10.3
    Checking critical-section v1.2.0
    Checking const-default v1.0.0
    Checking embedded-hal v1.0.0
   Compiling linkme v0.3.35
    Checking byteorder v1.5.0
    Checking bitmaps v3.2.1
   Compiling heapless v0.8.0
    Checking hash32 v0.3.1
    Checking riscv v0.16.0
    Checking rlsf v0.2.2
    Checking bitmap-allocator v0.2.1
    Checking page_table_entry v0.6.1
   Compiling autocfg v1.5.0
   Compiling zerocopy v0.8.48
    Checking stable_deref_trait v1.2.1
   Compiling percpu v0.4.0
   Compiling axhal v0.2.0 (/root/oskernel2026-orays/.omx/team/phase-d-ltp-stable-sc-ae18f5c7/worktrees/worker-3/kernel/arch/axhal)
    Checking axallocator v0.2.0
    Checking spin v0.9.8
   Compiling axplat-macros v0.2.0
   Compiling percpu_macros v0.4.0
   Compiling zerocopy-derive v0.8.48
   Compiling thiserror v2.0.18
    Checking arrayvec v0.7.6
    Checking const-str v1.1.0
    Checking lazyinit v0.2.2
    Checking static_assertions v1.1.0
    Checking axcpu v0.3.1 (/root/oskernel2026-orays/.omx/team/phase-d-ltp-stable-sc-ae18f5c7/worktrees/worker-3/vendor/axcpu)
    Checking axplat v0.4.1
    Checking page_table_multiarch v0.6.1
    Checking axalloc v0.2.0 (/root/oskernel2026-orays/.omx/team/phase-d-ltp-stable-sc-ae18f5c7/worktrees/worker-3/kernel/memory/axalloc)
    Checking axlog v0.2.0 (/root/oskernel2026-orays/.omx/team/phase-d-ltp-stable-sc-ae18f5c7/worktrees/worker-3/kernel/diagnostics/axlog)
   Compiling thiserror-impl v2.0.18
error[E0463]: can't find crate for `axplat_riscv64_qemu_virt`
  --> kernel/arch/axhal/src/lib.rs:54:9
   |
54 |         extern crate axplat_riscv64_qemu_virt;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

For more information about this error, try `rustc --explain E0463`.
error: could not compile `axhal` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
